--- a/src/main/resources/config/application-mysql.properties
+++ b/src/main/resources/config/application-mysql.properties
@@ -29,3 +29,16 @@ spring.datasource.validation-query=select 1;
 
 spring.datasource.time-between-eviction-runs-millis=60000
 spring.datasource.min-evictable-idle-time-millis=300000
+
+#other
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=false
+
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = validate
