--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -18,3 +18,6 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
 # Jadira
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+
+# Avoid Exception for LazyLoaded Entities while reading
+spring.jackson.serialization.fail_on_empty_beans=false
